recursion.cons.length.Length.scala.error
Compilation error:
Length:9: error: ')' expected but ';' found.
    return 1 + length(l.tail);
                             ^Length:11: error: illegal start of statement
  )
  ^